Stars count no longer wraps on page if 4 digits

--- a/src/main/web/sass/main.scss
+++ b/src/main/web/sass/main.scss
@@ -107,7 +107,7 @@ li {
 }
 .forks, .stars {
     color:  #ACB6C0;
-    font: normal 20px 'bentonsansregular';
+    font: normal 16px 'bentonsansregular';
 }
 .details, .more-details {
     font: normal 12px 'bentonsansregular';
